# abscissa

./: .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  README.md  appveyor.yml
.cargo/: audit.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: cli.yml  core.yml  derive.yml  rust.yml  security-audit.yml  security_audit.yml  tokio.yml  workspace.yml
abscissa/: CHANGES.md  Cargo.toml  README.md
abscissa/examples/: commands.rs  config.rs  options.rs
abscissa/src/: lib.rs  secrets.rs  util.rs
abscissa/src/application/: exit.rs
abscissa/src/application/components/: component.rs
abscissa/src/config/: global.rs  mod.rs  reader.rs
abscissa/src/error/: framework.rs
abscissa/src/logging/: simplelog.rs
abscissa/src/macros/: command.rs  config.rs  error.rs  mod.rs  status.rs
abscissa/src/options/: error.rs  mod.rs  opt.rs  parser.rs
abscissa/src/shell/: color_config.rs  isatty.rs  mod.rs
abscissa/tests/: options.rs
abscissa_derive/: Cargo.toml  README.md
abscissa_derive/src/: command.rs  config.rs  errors.rs  lib.rs  runnable.rs
abscissa_derive/src/options/: action.rs  mod.rs  parse.rs
abscissa_derive/src/options/opts/: attr.rs  cmd.rs  default.rs  free.rs  mod.rs  opt.rs
abscissa_derive/tests/: backtrace.rs  no_derive_display.rs  tests.rs  wraps.rs
abscissa_generator/: Cargo.toml  README.md
abscissa_generator/src/: lib.rs  properties.rs  template.rs
abscissa_generator/src/properties/: cargo.rs  framework.rs  name.rs  rust.rs
abscissa_generator/src/template/: collection.rs  iter.rs  name.rs
abscissa_generator/template/: Cargo.toml.hbs  README.md.hbs
abscissa_generator/template/src/: application.rs.hbs  commands.rs.hbs  config.rs.hbs  error.rs.hbs  lib.rs.hbs  prelude.rs.hbs
abscissa_generator/template/src/commands/: hello.rs.hbs  start.rs.hbs  version.rs.hbs
abscissa_generator/template/tests/: acceptance.rs.hbs
cli/: Cargo.toml  README.md
cli/src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  properties.rs  template.rs
cli/src/commands/: gen.rs  generate.rs  new.rs  version.rs
cli/src/commands/generate/: cmd.rs
cli/src/properties/: framework.rs  name.rs  rust.rs
cli/src/template/: collection.rs  name.rs  registry.rs
cli/template/: Cargo.toml.hbs  README.md.hbs
cli/template/src/: application.rs.hbs  commands.rs.hbs  config.rs.hbs  error.rs.hbs  lib.rs.hbs  prelude.rs.hbs
cli/template/src/commands/: start.rs.hbs  subcommand.rs.hbs  version.rs.hbs
cli/template/tests/: acceptance.rs.hbs
cli/tests/: generate_app.rs
cli/tests/app/: README.md  exit_status.rs  metadata.rs
core/: Cargo.toml  README.md
core/src/: application.rs  command.rs  component.rs  config.rs  lib.rs  logging.rs  path.rs  prelude.rs  runnable.rs  signal.rs  terminal.rs  testing.rs  thread.rs  trace.rs
core/src/application/: cell.rs  exit.rs  lock.rs  name.rs  state.rs
core/src/application/lock/: reader.rs  writer.rs
core/src/command/: entrypoint.rs  help.rs  usage.rs
core/src/component/: handle.rs  id.rs  registry.rs
core/src/component/registry/: iter.rs
core/src/config/: cell.rs  reader.rs
core/src/error/: context.rs  framework.rs  macros.rs
core/src/logging/: component.rs  config.rs  logger.rs
core/src/terminal/: component.rs  status.rs
core/src/testing/: config.rs  process.rs  runner.rs
core/src/testing/process/: exit_status.rs
core/src/thread/: kill_switch.rs  manager.rs  name.rs
core/src/trace/: component.rs  config.rs
core/tests/: component.rs
core/tests/example_app/: mod.rs
derive/: Cargo.toml  README.md
derive/src/: command.rs  component.rs  config.rs  lib.rs  runnable.rs
examples/: commands.rs  config.rs  options.rs
generator/src/: properties.rs
generator/src/properties/: framework.rs  name.rs
generator/src/template/: collection.rs  iter.rs
generator/template/: Cargo.toml.hbs
generator/template/src/: application.rs.hbs  lib.rs.hbs
generator/template/tests/: acceptance.rs.hbs
src/: application.rs  callable.rs  command.rs  component.rs  config.rs  error.rs  lib.rs  logging.rs  macros.rs  runnable.rs  secrets.rs  shell.rs  shutdown.rs  terminal.rs  testing.rs  thread.rs  util.rs
src/application/: components.rs  exit.rs  mod.rs  state.rs
src/application/components/: component.rs  mod.rs
src/application/lock/: reader.rs
src/command/: entrypoint.rs  usage.rs
src/component/: name.rs  registry.rs
src/config/: configurable.rs  global.rs  guard.rs  load.rs  loader.rs  merge.rs  mod.rs  options.rs  reader.rs
src/error/: framework.rs  mod.rs
src/logging/: component.rs  config.rs  logger.rs  mod.rs  simplelog.rs
src/macros/: application.rs  error.rs  log.rs  mod.rs  status.rs
src/options/: error.rs  mod.rs  parser.rs
src/shell/: color_config.rs  component.rs  extras.rs  mod.rs  stream.rs  terminal.rs
src/terminal/: color.rs  component.rs  status.rs  stream.rs
src/testing/: regex.rs  runner.rs
src/testing/process/: streams.rs
src/thread/: kill_switch.rs  name.rs
tests/: generate_app.rs  generated_app.rs  options.rs
tests/app/: README.md  exit_status.rs  metadata.rs
tokio/: Cargo.toml  README.md
tokio/src/: lib.rs
