[package]
name        = "abscissa"
description = """
              Application microframework with support for command-line option parsing,
              configuration, error handling, logging, and shell interactions
              """
version     = "0.0.6" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/abscissa/"
repository  = "https://github.com/iqlusioninc/abscissa/tree/develop/"
readme      = "README.md"
categories  = ["command-line-interface", "rust-patterns", "web-programming"]
keywords    = ["abscissa", "cli", "application", "framework", "service"]

[dependencies]
abscissa_derive = { version = "0", path = "abscissa_derive" }
abscissa_generator = { version = "0", optional = true, path = "abscissa_generator" }
atty = { version = "0.2", optional = true }
canonical-path = "0.1"
chrono = { version = "0.4", optional = true, features = ["serde"] }
failure = "0.1"
gumdrop = { version = "0.5", optional = true }
gumdrop_derive = { version = "0.5", optional = true }
heck = { version = "0.3", optional = true }
lazy_static = "1"
log = { version = "0.4", optional = true }
semver = { version = "0.9", optional = true }
serde = { version = "1", optional = true, features = ["serde_derive"] }
simplelog = { version = "0.5", optional = true }
term = { version = "0.5", optional = true }
toml = { version = "0.5", optional = true }
zeroize = "0.6"

[features]
default = [
    "application",
    "cli", # For cargo install. Abscissa apps use default-features=false
    "time"
]
application = [
    "config",
    "errors",
    "logging",
    "options",
    "semver",
    "status"
]
cli = [
    "abscissa_generator",
    "inflector"
]
config = [
    "secrets",
    "serde",
    "status",
    "toml"
]
errors = []
inflector = ["heck"]
logging = [
    "errors",
    "log",
    "simplelog"
]
options = [
    "errors",
    "gumdrop",
    "gumdrop_derive"
]
secrets = []
shell = [
    "atty",
    "errors",
    "term",
]
status = ["shell"]
time = ["chrono"]

[badges]
travis-ci = { repository = "iqlusioninc/abscissa", branch = "develop" }

[workspace]
members = [
    ".",
    "abscissa_derive",
    "abscissa_generator"
]
