[package]
name        = "abscissa"
description = """
              Application microframework with support for command-line option parsing,
              configuration, error handling, logging, and terminal interactions
              """
version     = "0.1.0-pre.2" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/abscissa/"
repository  = "https://github.com/iqlusioninc/abscissa/tree/develop/"
readme      = "README.md"
categories  = ["command-line-interface", "rust-patterns"]
keywords    = ["abscissa", "cli", "application", "framework", "service"]

[dependencies]
abscissa_derive = { version = "0.1.0-pre.2", path = "abscissa_derive" }
abscissa_generator = { version = "0.1.0-pre.2", optional = true, path = "abscissa_generator" }
canonical-path = "2"
chrono = { version = "0.4", optional = true, features = ["serde"] }
failure = "0.1"
gumdrop = { version = "0.5", optional = true }
gumdrop_derive = { version = "0.5", optional = true }
heck = { version = "0.3", optional = true }
lazy_static = "1"
log = { version = "0.4", optional = true }
secrecy = { version = "0.2", optional = true, features = ["serde"] }
semver = { version = "0.9", optional = true }
serde = { version = "1", optional = true, features = ["serde_derive"] }
termcolor = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
signal-hook = { version = "0.1", optional = true }

[dev-dependencies]
atty = "0.2"
tempfile = "3"
walkdir = "2"

[features]
default = ["application", "cli", "signals", "secrets", "time"]
application = ["config", "logging", "options", "semver", "terminal"]
cli = ["abscissa_generator", "inflector"]
config = ["secrets", "serde", "terminal", "toml"]
inflector = ["heck"]
logging = ["log"]
options = ["gumdrop", "gumdrop_derive"]
secrets = ["secrecy"]
signals = ["libc", "signal-hook"]
terminal = ["termcolor"]
time = ["chrono"]

[badges]
travis-ci = { repository = "iqlusioninc/abscissa", branch = "develop" }

[workspace]
members = [".", "abscissa_derive", "abscissa_generator"]
