[package]
name        = "abscissa_derive"
description = "Custom derive support for the abscissa application microframework"
version     = "0.0.1" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Murarth <murarth@gmail.com>", "Without Boats <boats@mozilla.com>"]
homepage    = "https://github.com/iqlusioninc/abscissa"
repository  = "https://github.com/iqlusioninc/abscissa/tree/master/abscissa_derive"
readme      = "README.md"
categories  = ["command-line-interface"]
keywords    = ["args", "command-line", "flag", "getopts", "option"]

[badges]
circle-ci = { repository = "iqlusioninc/abscissa" }
appveyor  = { repository = "tony-iqlusion/abscissa" }

[lib]
name = "abscissa_derive"
proc-macro = true

[features]
default = ["options"]
options = []

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"] # Document all modules
