[package]
name        = "abscissa_derive"
description = "Custom derive support for the abscissa application microframework"
version     = "0.0.2" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/abscissa"
repository  = "https://github.com/iqlusioninc/abscissa/tree/master/abscissa_derive"
readme      = "README.md"

[badges]
circle-ci = { repository = "iqlusioninc/abscissa" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"] # Document all modules
