[package]
name        = "abscissa_generator"
description = "Template-based generator for creating new Abscissa applications"
version     = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/abscissa"
repository  = "https://github.com/iqlusioninc/abscissa/tree/develop/abscissa_generator"
readme      = "README.md"
categories  = ["rust-patterns"]
keywords    = ["abscissa", "cli", "application", "framework", "service"]

[badges]
travis-ci = { repository = "iqlusioninc/abscissa", branch = "develop" }

[dependencies]
failure = "0.1"
handlebars = "2"
hashbrown = "0.4"
heck = "0.3"
log = "0.4"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"] # Document all modules
