[package]
name = "abscissa"
description = """
Application microframework with support for command-line option parsing,
configuration, error handling, logging, and terminal interactions.
This crate contains a CLI utility for generating new applications.
"""
version    = "0.6.0-beta.1" # Also update html_root_url in lib.rs when bumping this
license    = "Apache-2.0"
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
homepage   = "https://github.com/iqlusioninc/abscissa/"
repository = "https://github.com/iqlusioninc/abscissa/tree/main/cli/"
readme     = "../README.md"
categories = ["command-line-interface", "config", "rust-patterns"]
keywords   = ["abscissa", "cli", "application", "framework", "service"]
edition    = "2021"
rust-version = "1.56"

[dependencies]
abscissa_core = { version = "=0.6.0-beta.1", path = "../core" }
clap = "=3.0.0-rc.5"
handlebars = "4"
ident_case = "1"
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
abscissa_core = { version = "=0.6.0-beta.1", features = ["testing"], path = "../core" }
once_cell = "1.4"
