[package]
name        = "abscissa_derive"
description = "Custom derive support for the abscissa application microframework"
version     = "0.3.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/abscissa"
repository  = "https://github.com/iqlusioninc/abscissa/tree/develop/abscissa_derive"
readme      = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
ident_case = "1"
proc-macro2 = "1"
quote = "1"
syn = "1"
synstructure = "0.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"] # Document all modules
