[package]
name         = "abscissa_derive"
description  = "Custom derive support for the abscissa application microframework"
version      = "0.9.0-rc.0"
license      = "Apache-2.0"
authors      = ["Tony Arcieri <tony@iqlusion.io>"]
homepage     = "https://github.com/iqlusioninc/abscissa"
repository   = "https://github.com/iqlusioninc/abscissa/tree/main/derive"
readme       = "README.md"
edition      = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
ident_case = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"
synstructure = "0.13"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"] # Document all modules
