[package]
name        = "abscissa_tokio"
description = "Support for launching Tokio runtimes within Abscissa applications"
version     = "0.6.0-pre.3" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/abscissa"
repository  = "https://github.com/iqlusioninc/abscissa/tree/main/tokio"
readme      = "README.md"

[dependencies]
abscissa_core = { version = "0.6.0-pre.2", path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
actix-rt = { version = "2.3", optional = true }

[features]
actix = ["actix-rt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
