[package]
name         = "abscissa_tokio"
description  = "Support for launching Tokio runtimes within Abscissa applications"
version      = "0.9.0"
license      = "Apache-2.0"
authors      = ["Tony Arcieri <tony@iqlusion.io>"]
homepage     = "https://github.com/iqlusioninc/abscissa"
repository   = "https://github.com/iqlusioninc/abscissa/tree/main/tokio"
readme       = "README.md"
edition      = "2024"
rust-version = "1.85"

[dependencies]
abscissa_core = { version = "0.9", path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
actix-rt = { version = "2.2", optional = true }

[features]
actix = ["actix-rt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
